esqueleto de html

--- a/index.html
+++ b/index.html
@@ -5,18 +5,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>IAwiki</title>
 </head>
 
 <body>
+    <img src="./multimedia/403906fc-fe91-45c0-ab98-6f7312c72569.jpg" alt="">
     <h1>IAwiki</h1>
-    <nav>
+    <nav class="navbar">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="">Inicio</a></li>
+            <li><a href="">Búsqueda</a></li>
+            <li><a href="">Contacto</a></li>
         </ul>
 
+        <section>
+            <div>
+                <div>
+                    <h3>Buscar por titulo</h3>
+                    <input type="search" name="porTitulo" id="porTitulo">
+                </div>
+                <div>
+                    <h3>Buscar por tag</h3>
+                    <input type="search" name="porTag" id="porTag">
+                </div>
+                <div>
+                    <button>crear articulo</button>
+                    <button>editar articulo</button>
+                </div>
+            </div>
+        </section>
+        <section class="contenedor1">
+            <div class="modal">
+                <h4>articulo uno</h4>
+                <button class="tag">tag1</button>
+                <button class="tag">tag2</button>
+                <button class="tag">tag3</button>
+                <button class="tag">tag4</button>
+                <button >Ver Articulo</button>
+            </div>
+            <div class="modal">
+                <h4>articulo uno</h4>
+                <button>tag1</button>
+            </div>
+            <div class="modal">
+                <h4>articulo uno</h4>
+                <button>tag1</button>
+            </div>
+            <div class="modal">
+                <h4>articulo uno</h4>
+                <button>tag1</button>
+            </div>
+        </section>
     </nav>
 </body>
 
