pruebo con modal

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     <input type="search" name="porTag" id="porTag">
                 </div>
                 <div class="miniCont">
-                    <button>crear articulo</button>
-                    <button>editar articulo</button>
+                    <button id="crearArt">crear articulo</button>
+                    <button id="modArt">editar articulo</button>
                 </div>
             </div>
 
@@ -65,10 +65,18 @@
             </div>
         </section>
     </main>
-
+    <section>
+        <div class="contenedor-modal">
+            <h2>modal</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero similique assumenda numquam labore
+                dolore illum! Cum suscipit doloribus ducimus iste!</p>
+                <a href="#" class="cta">modal</a>
+        </div>
+    </section>
     <footer id="contacto">
         <h3>Manuel Achaval</h3>
     </footer>
+    <script src="main.js"></script>
 </body>
 
 </html>
